<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/menu_language">

        <Preference
            app:key="@string/intent_to_language"
            app:title="@string/change_language" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/reminder_title">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:key="@string/reminder_daily_key"
            app:summary="@string/summary_reminder"
            app:title="@string/daily_reminder_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:key="@string/remider_upcoming_key"
            app:summary="@string/summary_reminder"
            app:title="@string/upcoming_reminder_title" />

    </PreferenceCategory>

</PreferenceScreen>
